--- a/index.html
+++ b/index.html
@@ -163,12 +163,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <h5>Date</h5>
                 <p>22 Aug 2020, 10:30 WITA (GMT+8)</p>
                 <div style="margin:2em 1em">
-                    <p>Due to pandemic situation, our wedding will be held privately within family. <br> We will be really glad if you can join us in our happiest moment virtually.<br> We will livestream our wedding via youtube channel and instagram</p>
+                    <p>Due to pandemic situation, our wedding was held privately within family. <br> Thanksfully our wedding has been held and we already happily married. Thanks for your wishes to us.</p>
                 </div>
                 <ul class="social-icons">
                     <a href="https://www.instagram.com/arandelstory/" class="icon-button-countdown instagram-countdown"><i class="icon-instagram"></i><span></span></a>
                     <a href="https://www.youtube.com/channel/UC8UmQ3Vnb0wFj10C_us6j7w" class="icon-button-countdown youtube-countdown"><i class="icon-youtube"></i><span></span></a>
                 </ul>
+                <!--
                 <div id="counter"> </div>
                 <script async src="js/jquery.countdown.js" defer="defer"></script>
                 <script src="js/script.js" defer="defer"></script>
@@ -177,6 +178,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Akad%20Nikah%20Pebi%20-%20Fadel&dates=20200822T023000Z%2F20200822T043000Z&sprop=website%7C%20http%3A%2F%2Farandel.wedding&details=Akad%20Nikah%0A%0APebriani%20Artha%20%28Putri%20Kreshna%20Artha%20dan%20Sri%20Isnani%29%0ANaufalino%20Fadel%20Hutomo%20%28Putra%20Katronica%20Nefi%20dan%20Nuryalis%29%0A%0AWebsite%20%3A%20http%3A%2F%2Farandel.wedding%0ALivestreaming%20Youtube%20%3A%20https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUC8UmQ3Vnb0wFj10C_us6j7w%2F&sf=true&output=xml"
                     target="_blank" class="btn btn-primary">
                     <span class="glyphicon glyphicon-calendar"></span> Add To Calendar</a>
+                -->
             </div>
         </div>
     </div>
